# RoadSimulator3

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-DOCS  LICENSE-PLUGINS  Makefile  NOTICE.md  README.md  ROADMAP.md  TODO_REFACTOR.md  TODO_v1.0.md  Update Script ‹ RoadSimulator3 — WordPress.html  VERSION.md  find_function_import.sh  pyproject.toml  pytest.ini  requirements.txt  run_simulate.sh  run_tests.sh  zip_project.sh  ~$adSimulator3_rapport.docx
RS3-clean.git/: config  packed-refs
check/: check_realism.py
config/: README_events_config.md  altitude.yaml  check_events_config.py  config.yaml  dataset_schema.yaml  event_categories.yaml  events.yaml  fleet.yaml  global.yaml  rs3.yaml  simulation.yaml  simulator.yaml  simulator_haute_normandie.yaml  speed.yaml
core/: config_loader.py  decorators.py  exporters.py  exporters_schema_merge.py  geo_utils.py  gps_utils.py  gyroscope.py  h3_zone_mapper.py  imu_utils.py  init.py  interpolation.py  kinematics.py  kinematics_speed.py  meteo_loader.py  osm_zone_loader.py  pbf_utils.py  plot_utils.py  postprocessing.py  reports.py  reprojection.py  road_analysis.py  route_generator.py  rs3df.py  utils.py  validation.py  visualization.py
core2/: __init__.py  context.py  contracts.py  pipeline.py  plugin_loader.py
enrichments/: delivery_markers.py  event_category_mapper.py
helpers/: diagnose_turn_validation.py  enhance_inertial_lat.py  explore_turn_detection_params.py  explore_turn_thresholds.py  test_osrm_roundabouts.py
notebooks/: visualize_sinuosity_and_turns.ipynb
roadsimulator3.egg-info/: PKG-INFO  (+4 more)
(+148 files in other folders)
