[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roadsimulator3"
version = "1.0.0"
description = "Inertial road simulation (GPS + IMU + events) at 10 Hz"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-only" }
authors = [{name = "Sébastien Edet", email = "sebastien.edet@gmail.com"}]
dependencies = [
  "rs3-contracts>=1.0.0,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "black>=24", "flake8>=7", "ruff>=0.5"]

[project.scripts]
rs3-simulate = "runner.run_simulation:main"

[tool.setuptools]
packages = ["core", "simulator", "runner"]